given in to intellij warnings